--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
         ul {
-            line-height: 1.6;
+           max-width: 600px;
+           margin-right: auto;
+           margin-left: auto;
+        }
+        li {
+           line-height: 1.6;
         }
         #title, #img-caption{
             text-align: center;
@@ -26,7 +31,7 @@
             margin: auto auto auto auto;
         }
         #tribute-footer {
-            margin-left: 22px;
+            text-align: center;
             font-size: larger;
         }
     </style>
